# data_collector

./: README.md
collector/: Cargo.toml  uuid
collector/src/: main.rs
server/: Cargo.toml  collection.db
server/migrations/: 20250411115439_init.sql
server/src/: collector.html  collector.rs  index.html  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
